--- a/public/css/pubcart.css
+++ b/public/css/pubcart.css
@@ -72,7 +72,22 @@
 
 #checkout-btn {
   color: var(--white);
+  transition: all 0.4s;
+  border: none;
 }
+
+#checkout-btn:active {
+  transform: scale(0.9);
+}
+
+.checkout {
+  transition: all 0.2s;
+}
+
+.checkout:hover {
+  transform: translateY(-3px);
+}
+
 
 @media screen and (max-width: 1046px) {
   .cart-container {
